--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "morgan": "^1.10.0",
